--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -16,7 +16,7 @@
                     <br>
                     <div class="btn-group box-two-line">
                         <span class="circle circle-edit"></span>
-                        <button type="button" routerLink="/member/edit/{{memberData.GroupID}}/{{memberData.UserID}}" class="btn btn-info">Edit</button>
+                        <button type="button" routerLink="/member/edit/{{memberData.GroupID}}/{{memberData.UserID}}" class="btn btn-info-edit">Edit</button>
                     </div>
 
 
