--- a/src/app/member/member-create/member-create.component.html
+++ b/src/app/member/member-create/member-create.component.html
@@ -50,7 +50,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="IsGroupAdministrator" 
               (change)="IsGroupAdministrator = !IsGroupAdministrator">
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Admin
               </span>
             </label>
@@ -61,7 +61,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="IsWorkHourReceiver" 
               (change)="IsWorkHourReceiver = !IsWorkHourReceiver">
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Work Hour Receiver
               </span>
             </label>
@@ -71,7 +71,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="IsEscalationReceiver" 
               (change)="IsEscalationReceiver = !IsEscalationReceiver">
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Level2
               </span>
             </label>
@@ -81,7 +81,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="IsAcknowledgeResultReceiver" 
               (change)="IsAcknowledgeResultReceiver = !IsAcknowledgeResultReceiver">
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Acknowledgement
               </span>
             </label>
