--- a/src/app/member/member-edit/member-edit.component.html
+++ b/src/app/member/member-edit/member-edit.component.html
@@ -66,7 +66,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="memberData.IsGroupAdministrator" 
               (change)="memberData.IsGroupAdministrator = !memberData.IsGroupAdministrator" >
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Admin
               </span>
             </label>
@@ -77,7 +77,7 @@
               <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsWorkHourReceiver"
               (change)="memberData.IsWorkHourReceiver = !memberData.IsWorkHourReceiver" >
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Work Hour Receiver
               </span>
             </label>
@@ -87,7 +87,7 @@
               <input type="checkbox" class="custom-control-input" [checked]="memberData.IsEscalationReceiver"
               (change)="memberData.IsEscalationReceiver = !memberData.IsEscalationReceiver" >
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Level2
               </span>
             </label>
@@ -97,7 +97,7 @@
               <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsAcknowledgeResultReceiver"
               (change)="memberData.IsAcknowledgeResultReceiver = !memberData.IsAcknowledgeResultReceiver" >
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Acknowledgement
               </span>
             </label>
