--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -75,7 +75,7 @@
                         <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input" [checked]="memberData.IsGroupAdministrator" disabled>
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Admin
               </span>
             </label>
@@ -85,7 +85,7 @@
                         <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input" [checked]="memberData.IsWorkHourReceiver" disabled>
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Work Hour Receiver
               </span>
             </label>
@@ -94,7 +94,7 @@
                         <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input" [checked]="memberData.IsEscalationReceiver" disabled>
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Level2
               </span>
             </label>
@@ -103,7 +103,7 @@
                         <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input"  [checked]="memberData.IsAcknowledgeResultReceiver" disabled>
               <span class="custom-control-indicator"></span>
-              <span class="text-selector">
+              <span class="custom-control-description">
                 Acknowledgement
               </span>
             </label>
