--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -34,13 +34,14 @@
                     </div>
                 </div>
 
+                <div class="col-xs-11 col-md-11 col-lg-8"  [ngClass]="{'padding-r' : (userList | searchfilter: filterName).length < 9}"  style="padding-right: 0; margin: auto; margin-bottom: 10px; margin-top: -8px;" *ngIf="userList.length > 10">
+                        <input type="text" class="form-control"[(ngModel)]="filterName" placeholder="Search" style="border-radius: 0;" />
+                </div>
                 <div class="col-xs-11 col-md-11 col-lg-8" style="margin: auto; overflow: auto;">
                     <div class="list-group" id="list-team-member">
-                        <!--*ngFor = "let item of info"-->
-                        <!--<h1 style="font-size:20vw;"> {{item.GroupUserID}}</h1>-->
-                        <a class="list-group-item list-group-item-action " *ngFor="let i of Members; let inx = index" 
-                        [ngClass]="{'active': _memberService.SelectedIndexMember == inx,'overflow-list' : Members.length > 9}" routerLink="/member/detail/{{groupId}}/{{i.UserID}}" (click)="selectMember(inx)">
-                         {{i.User.FirstName}}  {{i.User.LastName}}
+                        <a class="list-group-item list-group-item-action " *ngFor="let i of (userList | searchfilter: filterName) ; let inx = index" 
+                        [ngClass]="{'active': _memberService.SelectedIndexMember == inx,'overflow-list' : (userList | searchfilter: filterName).length > 9}" routerLink="/member/detail/{{i.groupId}}/{{i.userId}}" (click)="selectMember(inx)">
+                         {{i.name}}
                         </a>
 
                     </div>
