--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,9 +16,17 @@
 		</div>
 	  </div>
 	  <div class="row">
-		<div class="mx-auto text-center" style=" margin: 5% auto;">
-			<h1 class="lead mb-3" style="font-size:1.5vw; margin-top:1rem;">Click here</h1>
-			<a class="anchor" href="/home#sectionteam"><img src="./assets/img/down.png" style="width:4vw;"></a>
+		<div class="mx-auto text-center" style=" margin: 5% auto;    width: 100%;">
+			<h1 class="lead" style="font-size:1.5vw; ">Click here</h1>
+			<div class="sonar-wrapper">
+					<div class="sonar-emitter">
+						<div class="sonar-wave"></div>
+						<a class="anchor" href="/home#sectionteam">
+							<img src="./assets/img/down.png" style="width:4vw;">
+						</a>
+					</div>
+				</div>
+
 		</div>
 	  </div>
   </div>
@@ -47,6 +55,7 @@
 		<h1 class="lead" style="font-size:1.5vw; margin-top:1rem;">Click here</h1>
 
 	</div> -->
+
 
 	<div class="section-data">
 		<p id="sectionteam"></p>
