--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -22,8 +22,8 @@
 
                 </div>
             </div>
-            <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
-                <div class="col-4">
+            <div class="row align-items-center no-gutters top-content" >
+                <div class="col-4 box-pic">
                     <div class="thumbnail" *ngIf="profilePicture != ''">
                         <img (error)="updateUrl($event)" [src]="profilePicture"  />
                     </div>
