--- a/src/app/member/member-create/member-create.component.html
+++ b/src/app/member/member-create/member-create.component.html
@@ -1,8 +1,8 @@
 <div class="container  border-info" style="margin-top: 10px;">
   <div class="row" style="min-height: 550px;">
     <div class="col-11 align-items-center">
-      <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
-        <div class="col-4">
+      <div class="row align-items-center no-gutters top-content" >
+        <div class="col-4 box-pic">
           <div class="thumbnail">
             <img src="./../assets/img/user1.png"  alt="Image" />
           </div>
@@ -88,7 +88,7 @@
           </div>
 
         </div>
-        <div class="row" style="float: right;  margin: 25px auto; margin-top: 50px;">
+        <div class="row box-btn">
           <button type="button" class="btn btn-info btn-save" (click)="addUserOnGroup()">Save</button>
           <button type="button" class="btn btn-danger btn-cancel" (click)="back()" routerLink="/member/detail/{{groupId}}">Cancel</button>
         </div>
