--- a/src/app/member/member-edit/member-edit.component.css
+++ b/src/app/member/member-edit/member-edit.component.css
@@ -147,3 +147,32 @@
 .custom-control-input:focus~.custom-control-indicator {
     box-shadow: none;
 }
+
+@media screen and (min-width: 1285px), screen and (min-height: 615px) {
+    .top-content {
+        margin-top: 20px; 
+        margin-bottom: 15px;
+    }
+        
+    .box-btn {
+        float: right;  
+        margin: 25px auto; 
+        margin-top: 15px;
+    }
+
+    .box-pic {
+        max-width: 200px; 
+    }
+}
+
+@media screen and (min-width: 1286px), screen and (min-height: 918px) {
+    .box-btn {
+        margin-top: 45px;
+    }
+
+    .box-pic {
+            max-width: none; 
+    }
+    
+}
+
