--- a/src/app/member/member-edit/member-edit.component.html
+++ b/src/app/member/member-edit/member-edit.component.html
@@ -10,8 +10,8 @@
           </div>
         </div>
       </div>
-      <div class="row align-items-center no-gutters" style="margin-top: 25px; margin-bottom: 20px;">
-        <div class="col-4">
+      <div class="row align-items-center no-gutters top-content">
+        <div class="col-4 box-pic" >
             <div class="thumbnail">
                 <img (error)="updateUrl($event)" [src]="profilePicture"  alt="Image" />
             </div>
@@ -104,7 +104,7 @@
           </div>
 
         </div>
-        <div class="row" style="float: right;  margin: 25px auto; margin-top: 50px;">
+        <div class="row box-btn" >
           <button type="button" class="btn btn-info btn-save" (click)="updateProfile()">Save</button>
           <button type="button" class="btn btn-danger btn-cancel" routerLink="/member/detail/{{memberData.GroupID}}/{{memberData.UserID}}">Cancel</button>
         </div>
